<resources>
    <string name="app_name">DÜKKAN TOGO</string>
    <string name="choose_country">Choose Country</string>
    <string name="please_select_the_required_category_in_order_to_obtain_the_required">Please Select The Required Account In Order To Obtain The Required.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="confirm">confirm</string>
    <string name="enter_the_fingerprint">Enter The Fingerprint</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_enter_the_correct_mobile_number_and_password">Please Enter The Correct Mobile Number And Password</string>
    <string name="e_mail_or_mobile_number">E-Mail Or Mobile Number</string>
    <string name="password">Password</string>
    <string name="hm122qa_gmail_com">hm122qa@gmail.com</string>
    <string name="pass">**********</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">OR</string>
    <string name="please_enter_email_password">Please Enter email and password</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_twitter">Continue With Twitter</string>
    <string name="skip">Skip</string>
    <string name="full_name">Full Name</string>
    <string name="street_building_no">Street / Building No.</string>
    <string name="postal_code">Postal Code</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_review">Please enter review</string>
    <string name="enter_name">Please enter user name</string>
    <string name="enter_street_building_no">Please enter Street / Building No.</string>
    <string name="enter_postal_code">Please enter Postal Code</string>
    <string name="enter_e_mail">Please enter mail</string>
    <string name="enter_mobile_number">Please enter Mobile Number</string>
    <string name="enter_confirm_password">Please enter confirm password </string>
    <string name="enter_password">Please enter password</string>
    <string name="check_terms">Please check Terms And Conditions</string>
    <string name="attach_to_all_terms_conditions"><![CDATA[Attach to all Terms & Conditions]]></string>
    <string name="forget_password2">FORGET PASSWORD</string>
    <string name="send">send</string>
    <string name="enter_the_code_sent_to_you">ENTER THE CODE SENT TO YOU</string>
    <string name="resend_the_code"> <u>Resend The Code </u></string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="do_you_really_want_to_log_out">Do You Really Want To Log Out?!</string>
    <string name="log_out">Log Out</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="share_app">Share App</string>
    <string name="switch_accounts">Switch Accounts</string>
    <string name="settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="my_points">My Points</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="store_map">Store Map</string>
    <string name="home">Home</string>
    <string name="home_page">home page</string>
    <string name="stores">Stores</string>
    <string name="view_all"><u>View All</u></string>
    <string name="filter_stores">Filter Stores</string>
    <string name="most_wanted">most wanted</string>
    <string name="new_products">new products</string>
    <string name="worldwide_trademark">Worldwide Trademark</string>
    <string name="delivery_companies">delivery companies</string>
    <string name="more_me">More Me</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_to_cart2">Remove from cart</string>
    <string name="remove_to_cart">Remove</string>
    <string name="filter_latest_offers">Filter Latest Offers</string>
    <string name="categories">Categories</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="product">product</string>
    <string name="customer">Customer</string>
    <string name="evaluation">Evaluation</string>
    <string name="products_list">Products List</string>
    <string name="contact_information">contact information</string>
    <string name="similar_products">similar products</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="description">Description</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="express_delivery_1_3_business_daysreturn_and_cancellation_policy">express delivery (1-3 business daysreturn and cancellation policy</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="support_help"><![CDATA[Support & Help]]></string>
    <string name="languages">Languages</string>
    <string name="if_you_want_more_information_read_the_attribution_guide_license">if you want more information read the attribution guide license.</string>
    <string name="arabia">Arabia</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="turkish">Turkish</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="direct_contact_with_technical_support">Direct Contact With Technical Support</string>
    <string name="direct_number">Direct Number</string>
    <string name="help">Help</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="dishwasher">Dishwasher</string>
    <string name="cart">Cart</string>
    <string name="discount_codee">Discount Code</string>
    <string name="color">Color :</string>
    <string name="del">Del</string>
    <string name="check_out">Check Out</string>
    <string name="change">Change</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="cash">cash</string>
    <string name="payment_card">Payment card</string>
    <string name="redeem_points">Redeem points</string>
    <string name="address">Address</string>
    <string name="todo">TODO</string>
    <string name="add_new_address">add new address</string>
    <string name="save">save</string>
    <string name="CheckInternet">Internet Connection Required</string>
    <string name="my_profile">my profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="statistics">Statistics</string>
    <string name="orders">Orders</string>
    <string name="edit">Edit</string>
    <string name="fulfilled_orders">Fulfilled orders</string>
    <string name="unfulfilled_orders">Unfulfilled orders</string>
    <string name="qty">Qty :</string>
    <string name="date">Date</string>
    <string name="to_price">To price</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="number_of_orders">Number Of Orders</string>
    <string name="there_are_no_notifications">There are No Notifications</string>
    <string name="there_are_no_points">There are No Points</string>
    <string name="notifications">Notifications</string>
    <string name="points">Points</string>
    <string name="the_points_will_be_immediately_converted_into_credit_for_you_dear">The Points Will Be Immediately Converted Into Credit For You, Dear</string>
    <string name="enjoy_with_us_the_balance_at_22_euros">Enjoy With us The Balance At 22 Euros</string>
    <string name="details">Details</string>
    <string name="number_of_products">Number Of Orders</string>
    <string name="euros">Euros</string>
    <string name="paid_money">Paid Money</string>
    <string name="select">select…</string>
    <string name="last_seen">Last Seen …</string>
    <string name="read_code">Read Code</string>
    <string name="history_orders">History Orders</string>
    <string name="learn_with_us">Learn With Us</string>
    <string name="call_us">Call Us</string>
    <string name="products">Products</string>
    <string name="starting_place">Starting Place</string>
    <string name="arrival_area">Arrival Area</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="all_orders">All Orders</string>
    <string name="total_cost">Total Cost</string>
    <string name="scanning_code">Scanning Code ...</string>
    <string name="filter_orders">Filter Orders</string>
    <string name="first_date">First Date</string>
    <string name="second_date">Second Date</string>
    <string name="profile">profile</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="affiliation_date">Affiliation Date</string>
    <string name="license_number">License Number</string>
    <string name="license_photo">License Photo</string>
    <string name="motorcycles">Motorcycles Delivery</string>
    <string name="working_hours">Working Hours</string>
    <string name="time_from_work_to_completion">Time From Work To Completion</string>
    <string name="latest_orders">Latest Orders</string>
    <string name="drivers">Drivers</string>
    <string name="orders_delivered">Orders Delivered</string>
    <string name="work_hours">Work Hours</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="starting_date">Starting Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="create_code">Create code</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="section_selection">Section Selection</string>
    <string name="ok">OK</string>
    <string name="join_date">Join Date</string>
    <string name="choose_a_driver">Choose A Driver</string>
    <string name="choose_category">Choose Account</string>
    <string name="merchant">Merchant</string>
    <string name="driver">Driver</string>
    <string name="no_messages">No Messages</string>
    <string name="type_something">Type Something</string>
    <string name="driving_data">Driving Data</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="login_to_rate">Login to rate</string>
    <string name="share_via">Share via</string>
    <string name="specifications">Specifications :</string>
    <string name="write_your_opinion">Write Your Opinion</string>
    <string name="review">review</string>
    <string name="payment_method">Payment Method</string>
    <string name="name">Name</string>
    <string name="please_wait">Please wait ....</string>
    <string name="facebook_app_id" translatable="false">1010083496266258</string>
 <string name="fb_login_protocol_scheme">fb163958234165942</string>
    <string name="url" translatable="false">https://duekkantogo.de/api/v1/</string>
    <string name="url2" translatable="false">https://duekkantogo.de</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="total_price_for">Total Price For</string>
    <string name="item_s">Item(s)</string>
    <string name="happy_shop_owner">Happy Shop Owner</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>