<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".activity.MainActivity">
    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_marginEnd="27dp"
            android:layout_marginStart="27dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_gravity="end"
            android:fontFamily="@font/abudhbi_regular"
            android:textSize="15sp"
            android:textColor="@color/darkTheme_colorBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"/>
        <TextView
            android:layout_marginTop="20dp"
            android:fontFamily="@font/abudhbi_bold"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>
        <TextView
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="@color/darkTheme_colorBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_correct_mobile_number_and_password"/>

        <TextView
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_or_mobile_number"/>
        <EditText
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:id="@+id/edit_mail"
            android:background="@drawable/button3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColorHint="#aeafaf"
            android:hint="@string/hm122qa_gmail_com"
            android:inputType="text"
            android:textSize="14sp"/>
        <TextView
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:id="@+id/edit_password"
            android:background="@drawable/button3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColorHint="#aeafaf"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textSize="14sp"/>
        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:fontFamily="@font/abudhbi_regular"
                android:layout_alignParentEnd="true"
                android:textSize="11sp"
                android:textColor="@color/darkTheme_colorBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"/>
            <CheckBox
                android:layout_centerVertical="true"
                android:textSize="11dp"
                android:fontFamily="@font/abudhbi_regular"
                android:text="@string/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <Button
            android:fontFamily="@font/abudhbi_bold"
            android:layout_marginTop="30dp"
            android:id="@+id/confirm_button"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:background="@drawable/button33"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/abudhbi_regular"
                android:textSize="13sp"
                android:textColor="@color/darkTheme_colorBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_account"/>
            <TextView
                android:layout_marginStart="5dp"
                android:fontFamily="@font/abudhbi_bold"
                android:textSize="13sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relative"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:background="@color/classic_colorTintedBackground"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <TextView
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@color/colorAccent"
            android:layout_centerInParent="true"
            android:fontFamily="@font/abudhbi_bold"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginEnd="27dp"
            android:layout_marginStart="27dp"
            android:background="@drawable/button3"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <ImageView
                android:src="@drawable/ic_group_12296"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginStart="20dp"
                android:fontFamily="@font/abudhbi_regular"
                android:textSize="13sp"
                android:textColor="@color/darkTheme_colorBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:background="@drawable/button3"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:src="@drawable/ic_group_12295" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/abudhbi_regular"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/darkTheme_colorBackground"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>