<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".activity.MainActivity">
    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_marginEnd="27dp"
            android:layout_marginStart="27dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:fontFamily="@font/abudhbi_bold"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password2"/>
        <TextView
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="@color/darkTheme_colorBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_correct_mobile_number_and_password"/>

        <TextView
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_or_mobile_number"/>
        <EditText
            android:fontFamily="@font/abudhbi_regular"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:id="@+id/edit_mail"
            android:background="@drawable/button3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColorHint="#aeafaf"
            android:hint="@string/hm122qa_gmail_com"
            android:inputType="text"
            android:textSize="14sp"/>


        <Button
            android:fontFamily="@font/abudhbi_bold"
            android:layout_marginTop="30dp"
            android:id="@+id/confirm_button"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/send"
            android:background="@drawable/button33"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>

</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>