<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
       >
    <ImageView
            android:id="@+id/imageeee"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_line_3"
            />
    <TextView
        android:textAllCaps="true"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abudhbi_bold"
        android:id="@+id/textView0"
        android:layout_marginTop="10dp"
        android:text="@string/log_out"
        app:layout_constraintTop_toBottomOf="@+id/imageeee"
        android:textSize="18sp"
        />
    <TextView
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/blackTheme_colorBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abudhbi_regular"
        android:id="@+id/textView00"
        android:layout_marginTop="10dp"
        android:text="@string/do_you_really_want_to_log_out"
        app:layout_constraintTop_toBottomOf="@+id/textView0"
        android:textSize="17sp"
        />
    <Button
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView00"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/abudhbi_bold"
        android:layout_marginTop="24dp"
        android:id="@+id/yes_button"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/yes"
        android:background="@drawable/button33"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <Button
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/yes_button"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/abudhbi_bold"
        android:layout_marginTop="10dp"
        android:id="@+id/no_button"
        android:textSize="15sp"
        android:textColor="@color/nono"
        android:text="@string/no"
        android:background="@drawable/button3311"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>